--- a/gui/static/i18n/en.json
+++ b/gui/static/i18n/en.json
@@ -532,11 +532,11 @@
   "settings.approvalsCleanupConfirm": "Remove selected approvals?",
   "settings.approvalsCleanupDone": "Cleanup completed",
   "settings.tabsCleanupTitle": "Tabs cleanup",
-  "settings.tabsCleanupHint": "Clear local settings and cache for the selected tab.",
-  "settings.tabsCleanupScope": "Tab",
+  "settings.tabsCleanupHint": "Select one or more modules to clear module data and preferences.",
+  "settings.tabsCleanupScope": "Modules",
   "settings.tabsCleanupRun": "Clean up",
-  "settings.tabsCleanupConfirm": "Clear local data for the selected tab?",
-  "settings.tabsCleanupDone": "Local data cleared",
+  "settings.tabsCleanupConfirm": "Clear data for selected modules?",
+  "settings.tabsCleanupDone": "Data cleared: {count}",
   "settings.saved": "Settings saved",
   "settings.deployment.title": "Deployment mode",
   "settings.deployment.hint": "Choose deployment mode for this installation.",
@@ -2034,6 +2034,7 @@
   "monitoring.settings.notifyMaintenance": "Notify maintenance start/end",
   "monitoring.settings.autoTaskOnDown": "Automation: create task on monitor DOWN",
   "monitoring.settings.autoTLSIncident": "Automation: create incident on TLS expiry risk",
+  "monitoring.settings.autoIncidentCloseOnUp": "Automatically close incident when monitor is UP again",
   "monitoring.settings.autoTLSIncidentDays": "TLS incident threshold (days)",
   "monitoring.settings.saved": "Monitoring settings saved",
   "monitoring.certs.title": "Certificates",
@@ -2369,5 +2370,12 @@
   "docs.onlyoffice.forceSaveFailed": "Failed to save changes in OnlyOffice",
   "doc.onlyoffice.forcesave": "OnlyOffice explicit save requested",
   "docs.onlyoffice.loading": "Loading editor...",
-  "docs.onlyoffice.forceSaveNoVersion": "Save was requested, but a new document version was not created"
+  "docs.onlyoffice.forceSaveNoVersion": "Save was requested, but a new document version was not created",
+  "docs.export.approvalRequired": "Export requires approval from another employee",
+  "docs.export.selfApprovalForbidden": "Self-approval is not allowed",
+  "docs.export.requesterRequired": "Requester is required",
+  "settings.tabs.cleanup": "Cleanup",
+  "settings.tabsCleanupPickAtLeastOne": "Select at least one module to clean up",
+  "common.selectAll": "Select all",
+  "common.clear": "Clear"
 }
