--- a/gui/static/i18n/ru.json
+++ b/gui/static/i18n/ru.json
@@ -437,6 +437,7 @@
   "settings.subtitle": "Персонализация и язык интерфейса",
   "settings.tabs.general": "Основные",
   "settings.tabs.advanced": "Дополнительные",
+  "settings.tabs.cleanup": "\u041e\u0447\u0438\u0441\u0442\u043a\u0430",
   "settings.tabs.https": "HTTPS",
   "settings.tabs.hardening": "Укрепление безопасности",
   "settings.tabs.tags": "Теги",
@@ -532,11 +533,12 @@
   "settings.approvalsCleanupConfirm": "Удалить выбранные разрешения?",
   "settings.approvalsCleanupDone": "Очистка завершена",
   "settings.tabsCleanupTitle": "Очистка вкладок",
-  "settings.tabsCleanupHint": "Очистите локальные настройки и кэш выбранной вкладки.",
-  "settings.tabsCleanupScope": "Вкладка",
+  "settings.tabsCleanupHint": "\u0412\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u043e\u0434\u0438\u043d \u0438\u043b\u0438 \u043d\u0435\u0441\u043a\u043e\u043b\u044c\u043a\u043e \u043c\u043e\u0434\u0443\u043b\u0435\u0439 \u0434\u043b\u044f \u043e\u0447\u0438\u0441\u0442\u043a\u0438 \u0434\u0430\u043d\u043d\u044b\u0445 \u0438 \u043d\u0430\u0441\u0442\u0440\u043e\u0435\u043a.",
+  "settings.tabsCleanupScope": "\u041c\u043e\u0434\u0443\u043b\u0438",
   "settings.tabsCleanupRun": "Очистить",
-  "settings.tabsCleanupConfirm": "Очистить локальные данные выбранной вкладки?",
-  "settings.tabsCleanupDone": "Локальные данные очищены",
+  "settings.tabsCleanupConfirm": "\u041e\u0447\u0438\u0441\u0442\u0438\u0442\u044c \u0434\u0430\u043d\u043d\u044b\u0435 \u0432\u044b\u0431\u0440\u0430\u043d\u043d\u044b\u0445 \u043c\u043e\u0434\u0443\u043b\u0435\u0439?",
+  "settings.tabsCleanupDone": "\u0414\u0430\u043d\u043d\u044b\u0435 \u043e\u0447\u0438\u0449\u0435\u043d\u044b: {count}",
+  "settings.tabsCleanupPickAtLeastOne": "\u0412\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u0445\u043e\u0442\u044f \u0431\u044b \u043e\u0434\u0438\u043d \u043c\u043e\u0434\u0443\u043b\u044c \u0434\u043b\u044f \u043e\u0447\u0438\u0441\u0442\u043a\u0438",
   "settings.saved": "Настройки сохранены",
   "settings.deployment.title": "Режим развертывания",
   "settings.deployment.hint": "Выберите режим развертывания для этой установки.",
@@ -2033,6 +2035,7 @@
   "monitoring.settings.notifyMaintenance": "Уведомлять о обслуживании",
   "monitoring.settings.autoTaskOnDown": "Автоматизация: создавать задачу при недоступности монитора",
   "monitoring.settings.autoTLSIncident": "Автоматизация: создавать инцидент при истечении TLS",
+  "monitoring.settings.autoIncidentCloseOnUp": "\u0410\u0432\u0442\u043e\u043c\u0430\u0442\u0438\u0447\u0435\u0441\u043a\u0438 \u0437\u0430\u043a\u0440\u044b\u0432\u0430\u0442\u044c \u0438\u043d\u0446\u0438\u0434\u0435\u043d\u0442 \u043f\u0440\u0438 \u0432\u043e\u0441\u0441\u0442\u0430\u043d\u043e\u0432\u043b\u0435\u043d\u0438\u0438 \u043c\u043e\u043d\u0438\u0442\u043e\u0440\u0430",
   "monitoring.settings.autoTLSIncidentDays": "Порог TLS-сертификата (дни)",
   "monitoring.settings.saved": "Настройки мониторинга сохранены",
   "monitoring.certs.title": "Сертификаты",
@@ -2369,5 +2372,10 @@
   "docs.onlyoffice.forceSaveFailed": "Не удалось сохранить изменения в OnlyOffice",
   "doc.onlyoffice.forcesave": "Запрошено явное сохранение OnlyOffice",
   "docs.onlyoffice.loading": "Загрузка редактора...",
-  "docs.onlyoffice.forceSaveNoVersion": "Сохранение запрошено, но новая версия документа не была создана"
+  "docs.onlyoffice.forceSaveNoVersion": "Сохранение запрошено, но новая версия документа не была создана",
+  "docs.export.approvalRequired": "\u042d\u043a\u0441\u043f\u043e\u0440\u0442 \u0442\u0440\u0435\u0431\u0443\u0435\u0442 \u0441\u043e\u0433\u043b\u0430\u0441\u043e\u0432\u0430\u043d\u0438\u044f \u0434\u0440\u0443\u0433\u043e\u0433\u043e \u0441\u043e\u0442\u0440\u0443\u0434\u043d\u0438\u043a\u0430",
+  "docs.export.selfApprovalForbidden": "\u0421\u0430\u043c\u043e\u0441\u043e\u0433\u043b\u0430\u0441\u043e\u0432\u0430\u043d\u0438\u0435 \u044d\u043a\u0441\u043f\u043e\u0440\u0442\u0430 \u0437\u0430\u043f\u0440\u0435\u0449\u0435\u043d\u043e",
+  "docs.export.requesterRequired": "\u041d\u0435 \u0443\u043a\u0430\u0437\u0430\u043d \u0437\u0430\u044f\u0432\u0438\u0442\u0435\u043b\u044c \u044d\u043a\u0441\u043f\u043e\u0440\u0442\u0430",
+  "common.selectAll": "\u0412\u044b\u0431\u0440\u0430\u0442\u044c \u0432\u0441\u0435",
+  "common.clear": "\u0421\u0431\u0440\u043e\u0441\u0438\u0442\u044c"
 }
