--- a/gui/static/i18n/en.json
+++ b/gui/static/i18n/en.json
@@ -2209,6 +2209,7 @@
   "backups.subtitle": "Backup and restore management",
   "backups.tabs.overview": "Overview",
   "backups.tabs.history": "History",
+  "backups.tabs.contents": "Contents",
   "backups.tabs.restore": "Restore",
   "backups.tabs.plan": "Plan",
   "backups.actions.createNow": "Create backup now",
@@ -2251,6 +2252,35 @@
   "backups.restore.selectBackup": "Backup for restore",
   "backups.restore.progress": "Restore progress",
   "backups.restore.noProgress": "No restore steps yet",
+  "backups.contents.selectBackup": "Backup",
+  "backups.contents.placeholder": "Select backup",
+  "backups.contents.empty": "Select a backup to view its contents.",
+  "backups.contents.scope": "Scope",
+  "backups.contents.monitorCount": "Monitors in backup",
+  "backups.contents.includeFiles": "Files included",
+  "backups.contents.label": "Label",
+  "backups.contents.appVersion": "App version",
+  "backups.contents.dbEngine": "Database engine",
+  "backups.contents.gooseVersion": "Schema version",
+  "backups.contents.formatVersion": "Format version",
+  "backups.contents.checksum": "Checksum",
+  "backups.contents.payloadChecksums": "Payload checksums",
+  "backups.contents.payloadFile": "Payload file",
+  "backups.contents.entityCounts": "Module contents",
+  "backups.contents.entity": "Entity",
+  "backups.contents.records": "Records",
+  "backups.contents.entity.docs.documents": "Documents",
+  "backups.contents.entity.docs.folders": "Document folders",
+  "backups.contents.entity.incidents.incidents": "Incidents",
+  "backups.contents.entity.reports.reports": "Reports",
+  "backups.contents.entity.monitoring.monitors": "Monitors",
+  "backups.contents.entity.tasks.tasks": "Tasks",
+  "backups.contents.entity.tasks.boards": "Task boards",
+  "backups.contents.entity.tasks.spaces": "Task spaces",
+  "backups.contents.entity.controls.controls": "Controls",
+  "backups.contents.entity.accounts.users": "Users",
+  "backups.contents.entity.accounts.groups": "Groups",
+  "backups.contents.entity.approvals.approvals": "Approvals",
   "backups.plan.fields.enabled": "Enable automatic backups",
   "backups.plan.fields.scheduleType": "Backup frequency",
   "backups.plan.fields.time": "Time",
