--- a/gui/static/i18n/ru.json
+++ b/gui/static/i18n/ru.json
@@ -2211,6 +2211,7 @@
   "backups.subtitle": "Управление резервными копиями и восстановлением",
   "backups.tabs.overview": "Обзор",
   "backups.tabs.history": "История",
+  "backups.tabs.contents": "Содержимое",
   "backups.tabs.restore": "Восстановление",
   "backups.tabs.plan": "Расписание",
   "backups.actions.createNow": "Создать бэкап сейчас",
@@ -2253,6 +2254,35 @@
   "backups.restore.selectBackup": "Бэкап для восстановления",
   "backups.restore.progress": "Прогресс восстановления",
   "backups.restore.noProgress": "Шаги восстановления пока отсутствуют",
+  "backups.contents.selectBackup": "Бэкап",
+  "backups.contents.placeholder": "Выберите бэкап",
+  "backups.contents.empty": "Выберите бэкап для просмотра содержимого.",
+  "backups.contents.scope": "Охват",
+  "backups.contents.monitorCount": "Мониторы в бэкапе",
+  "backups.contents.includeFiles": "Файлы в бэкапе",
+  "backups.contents.label": "Метка",
+  "backups.contents.appVersion": "Версия приложения",
+  "backups.contents.dbEngine": "Движок БД",
+  "backups.contents.gooseVersion": "Версия схемы",
+  "backups.contents.formatVersion": "Версия формата",
+  "backups.contents.checksum": "Контрольная сумма",
+  "backups.contents.payloadChecksums": "Контрольные суммы payload",
+  "backups.contents.payloadFile": "Файл payload",
+  "backups.contents.entityCounts": "Состав модулей",
+  "backups.contents.entity": "Сущность",
+  "backups.contents.records": "Записей",
+  "backups.contents.entity.docs.documents": "Документы",
+  "backups.contents.entity.docs.folders": "Папки документов",
+  "backups.contents.entity.incidents.incidents": "Инциденты",
+  "backups.contents.entity.reports.reports": "Отчеты",
+  "backups.contents.entity.monitoring.monitors": "Мониторы",
+  "backups.contents.entity.tasks.tasks": "Задачи",
+  "backups.contents.entity.tasks.boards": "Доски задач",
+  "backups.contents.entity.tasks.spaces": "Пространства задач",
+  "backups.contents.entity.controls.controls": "Контроли",
+  "backups.contents.entity.accounts.users": "Пользователи",
+  "backups.contents.entity.accounts.groups": "Группы",
+  "backups.contents.entity.approvals.approvals": "Согласования",
   "backups.plan.fields.enabled": "Включить автобэкапы",
   "backups.plan.fields.scheduleType": "Частота бэкапов",
   "backups.plan.fields.time": "Время",
