--- a/gui/static/i18n/en.json
+++ b/gui/static/i18n/en.json
@@ -1041,8 +1041,8 @@
   "incidents.form.risks": "Risk of leak/outage",
   "incidents.form.riskPlaceholder": "Describe potential impact or downtime",
   "incidents.form.actions": "Actions taken",
-  "incidents.form.postmortem": "Postmortem",
-  "incidents.form.postmortemSave": "Save postmortem",
+  "incidents.form.postmortem": "Post-incident review",
+  "incidents.form.postmortemSave": "Save review",
   "incidents.form.save": "Save",
   "incidents.form.cancel": "Cancel",
   "incidents.form.nameRequired": "Please specify incident title",
@@ -1068,7 +1068,7 @@
   "incidents.close.stageNotDone": "Closure stage must be completed",
   "incidents.close.noDecisions": "Add at least one decision to closure stage",
   "incidents.postmortemRequired": "Postmortem is required for high/critical incidents",
-  "incidents.postmortemSaveFailed": "Failed to save postmortem",
+  "incidents.postmortemSaveFailed": "Failed to save review",
   "incidents.sla.firstResponseLate": "First response overdue",
   "incidents.sla.firstResponseOk": "First response in time",
   "incidents.sla.resolveLate": "Resolution overdue",
