--- a/gui/static/i18n/ru.json
+++ b/gui/static/i18n/ru.json
@@ -964,8 +964,8 @@
   "incidents.form.risks": "Есть ли риск утечки/простоя",
   "incidents.form.riskPlaceholder": "Опишите возможный ущерб или влияние на бизнес",
   "incidents.form.actions": "Что предпринято",
-  "incidents.form.postmortem": "Постмортем",
-  "incidents.form.postmortemSave": "Сохранить постмортем",
+  "incidents.form.postmortem": "Разбор после инцидента",
+  "incidents.form.postmortemSave": "Сохранить разбор",
   "incidents.form.save": "Сохранить",
   "incidents.form.cancel": "Отмена",
   "incidents.form.nameRequired": "Укажите название инцидента",
@@ -989,7 +989,7 @@
   "incidents.close.stageNotDone": "Стадия закрытия должна быть завершена",
   "incidents.close.noDecisions": "Добавьте хотя бы одно решение на этап закрытия",
   "incidents.postmortemRequired": "Для high/critical инцидентов постмортем обязателен",
-  "incidents.postmortemSaveFailed": "Не удалось сохранить постмортем",
+  "incidents.postmortemSaveFailed": "Не удалось сохранить разбор",
   "incidents.sla.firstResponseLate": "Просрочен первый ответ",
   "incidents.sla.firstResponseOk": "Первый ответ в SLA",
   "incidents.sla.resolveLate": "Просрочено устранение",
