--- a/gui/static/i18n/en.json
+++ b/gui/static/i18n/en.json
@@ -531,6 +531,17 @@
   "settings.approvalsCleanupRun": "Clean up",
   "settings.approvalsCleanupConfirm": "Remove selected approvals?",
   "settings.approvalsCleanupDone": "Cleanup completed",
+  "settings.monitoringCleanupTitle": "Monitoring cleanup",
+  "settings.monitoringCleanupHint": "Cleanup monitoring incidents by selected scope.",
+  "settings.monitoringCleanupScope": "What to remove",
+  "settings.monitoringCleanupOpen": "Open incidents",
+  "settings.monitoringCleanupCompleted": "Completed incidents",
+  "settings.monitoringCleanupPeriod": "By period",
+  "settings.monitoringCleanupFrom": "From",
+  "settings.monitoringCleanupTo": "To",
+  "settings.monitoringCleanupRun": "Clean up",
+  "settings.monitoringCleanupConfirm": "Remove selected monitoring incidents?",
+  "settings.monitoringCleanupDone": "Cleanup completed: {count}",
   "settings.tabsCleanupTitle": "Tabs cleanup",
   "settings.tabsCleanupHint": "Select one or more modules to clear module data and preferences.",
   "settings.tabsCleanupScope": "Modules",
@@ -996,6 +1007,9 @@
   "incidents.table.owner": "Owner",
   "incidents.table.createdAt": "Created",
   "incidents.table.updatedAt": "Updated",
+  "incidents.table.actions": "Actions",
+  "incidents.action.delete": "Delete",
+  "incidents.listDeleteConfirm": "Delete this incident?",
   "incidents.createButton": "Create incident",
   "incidents.createTitle": "Create incident",
   "incidents.createSubtitle": "Draft a new incident record",
@@ -1131,6 +1145,7 @@
   "incidents.stage.blocks.decisions.by": "Owner",
   "incidents.stage.blocks.decisions.date": "Date and time",
   "incidents.stage.blocks.decisions.outcome": "Decision",
+  "incidents.stage.blocks.decisions.outcome.closed": "Closed",
   "incidents.stage.blocks.decisions.outcome.approved": "Approved",
   "incidents.stage.blocks.decisions.outcome.rejected": "Rejected",
   "incidents.stage.blocks.decisions.outcome.blocked": "Blocked",
@@ -1254,6 +1269,8 @@
   "incidents.conflictVersion": "Incident was updated by another user",
   "incidents.cannotDeleteOverview": "The Overview section cannot be deleted",
   "incidents.deleted": "Incident is deleted",
+  "incidents.cleanupInvalidScope": "Invalid cleanup scope",
+  "incidents.cleanupInvalidPeriod": "Invalid cleanup period",
   "incidents.restored": "Incident restored",
   "incidents.regNoFailed": "Failed to generate incident registration number",
   "incidents.titleRequired": "Incident title is required",
@@ -1882,6 +1899,8 @@
   "monitoring.notify.testTitle": "✅ Test notification",
   "monitoring.notify.latency": "Latency",
   "monitoring.notify.time": "Time",
+  "monitoring.notify.error": "Error",
+  "monitoring.notify.httpStatus": "HTTP status",
   "monitoring.notify.expires": "Expires",
   "monitoring.notify.daysLeft": "Days left",
   "monitoring.notify.footer": "Berkut SCC",
