--- a/gui/static/i18n/ru.json
+++ b/gui/static/i18n/ru.json
@@ -532,6 +532,17 @@
   "settings.approvalsCleanupRun": "Очистить",
   "settings.approvalsCleanupConfirm": "Удалить выбранные разрешения?",
   "settings.approvalsCleanupDone": "Очистка завершена",
+  "settings.monitoringCleanupTitle": "Очистка мониторинга",
+  "settings.monitoringCleanupHint": "Очистка инцидентов мониторинга по выбранному диапазону.",
+  "settings.monitoringCleanupScope": "Что очистить",
+  "settings.monitoringCleanupOpen": "Открытые инциденты",
+  "settings.monitoringCleanupCompleted": "Завершенные инциденты",
+  "settings.monitoringCleanupPeriod": "По периоду",
+  "settings.monitoringCleanupFrom": "С",
+  "settings.monitoringCleanupTo": "По",
+  "settings.monitoringCleanupRun": "Очистить",
+  "settings.monitoringCleanupConfirm": "Удалить выбранные инциденты мониторинга?",
+  "settings.monitoringCleanupDone": "Очистка завершена: {count}",
   "settings.tabsCleanupTitle": "Очистка вкладок",
   "settings.tabsCleanupHint": "\u0412\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u043e\u0434\u0438\u043d \u0438\u043b\u0438 \u043d\u0435\u0441\u043a\u043e\u043b\u044c\u043a\u043e \u043c\u043e\u0434\u0443\u043b\u0435\u0439 \u0434\u043b\u044f \u043e\u0447\u0438\u0441\u0442\u043a\u0438 \u0434\u0430\u043d\u043d\u044b\u0445 \u0438 \u043d\u0430\u0441\u0442\u0440\u043e\u0435\u043a.",
   "settings.tabsCleanupScope": "\u041c\u043e\u0434\u0443\u043b\u0438",
@@ -919,6 +930,9 @@
   "incidents.table.owner": "Ответственный",
   "incidents.table.createdAt": "Создан",
   "incidents.table.updatedAt": "Обновлен",
+  "incidents.table.actions": "Действия",
+  "incidents.action.delete": "Удалить",
+  "incidents.listDeleteConfirm": "Удалить этот инцидент?",
   "incidents.createButton": "Создать инцидент",
   "incidents.createTitle": "Создание инцидента",
   "incidents.createSubtitle": "Черновик нового инцидента",
@@ -1154,6 +1168,8 @@
   "incidents.conflictVersion": "Инцидент был обновлен другим пользователем",
   "incidents.cannotDeleteOverview": "Нельзя удалить раздел \"Обзор\"",
   "incidents.deleted": "Инцидент удален",
+  "incidents.cleanupInvalidScope": "Некорректная область очистки",
+  "incidents.cleanupInvalidPeriod": "Некорректный период очистки",
   "incidents.restored": "Инцидент восстановлен",
   "incidents.regNoFailed": "Не удалось сформировать регистрационный номер",
   "incidents.titleRequired": "Укажите название инцидента",
@@ -1269,6 +1285,7 @@
   "incidents.stage.blocks.addOptional": "Добавить блок",
   "incidents.stage.blocks.noneAvailable": "Нет доступных блоков",
   "incidents.stage.blocks.decisions.outcome": "Решение",
+  "incidents.stage.blocks.decisions.outcome.closed": "Закрыт",
   "incidents.stage.blocks.decisions.outcome.approved": "Разрешено",
   "incidents.stage.blocks.decisions.outcome.rejected": "Отклонено",
   "incidents.stage.blocks.decisions.outcome.blocked": "Блокировка",
@@ -1883,6 +1900,8 @@
   "monitoring.notify.testTitle": "✅ Тестовое уведомление",
   "monitoring.notify.latency": "Задержка",
   "monitoring.notify.time": "Время",
+  "monitoring.notify.error": "Ошибка",
+  "monitoring.notify.httpStatus": "HTTP статус",
   "monitoring.notify.expires": "Истекает",
   "monitoring.notify.daysLeft": "Дней осталось",
   "monitoring.notify.footer": "Berkut SCC",
